--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -10,4 +10,15 @@
   gtag('config', "{{ site.google_analytics_id }}");
 </script>
 
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?{{ site.baidu_analytics_id }}";
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(hm, s);
+  })();
+</script>
+
+
 {% endif %}
