添加论文引用_20241119

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,7 +46,7 @@
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-    border-bottom: 1px #efefef solid;
+    // border-bottom: 1px #efefef solid;
     padding: 2em 0 2em 0;
 
 
@@ -172,3 +172,4 @@ a {
     background-color: #f9f9fa; /* 稍微深一点的背景色 */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15); /* 更深的阴影 */
   }
+
